<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">expensor_beta.villoro.com</string>
    <string name="content_authority">com.villoro.expensor_beta</string>

    <string name="app_name">Expensor_beta</string>
    <string name="hello_world">Hello world!</string>

    <!-- General -->
    <string name="incomes">Ingressos</string>
    <string name="expenses">Despeses</string>
    <string name="summary">Sumari</string>
    <string name="history">Historial</string>
    <string name="me">Jo</string>

    <!-- Group Transaction -->
    <string name="title_pay">"Paga: "</string>
    <string name="title_spend">"Gasta: "</string>
    <string name="everybody">Tothom</string>

    <!-- Dialogs -->
    <string name="dialog_options">Opcions</string>
    <string name="dialog_edit">Editar</string>
    <string name="dialog_delete">Eliminar</string>
    <string name="dialog_are_you_sure_delete">Estàs segur que vols eliminar-ho?</string>
    <string name="dialog_are_you_sure_return">Estàs segur que vols marcar-ho com a retornat?</string>
    <string name="dialog_ok">Si</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="dialog_settle">Saldar</string>

    <!-- actions in menu -->
    <string name="action_sync">Sincronitzar</string>
    <string name="action_settings">Configuració</string>
    <string name="action_log_out">Tancar sessió</string>
    <string name="action_add">Afegir</string>
    <string name="action_edit">Editar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_delete">Eliminar</string>
    <string name="action_add_transaction">Afegir transacció</string>
    <string name="action_add_people">Afegir persona</string>
    <string name="action_add_group">Afegir grup</string>

    <!-- Headers -->
    <string name="header_personal">Personal</string>
    <string name="header_friends">Amics</string>
    <string name="header_incomes">Ingressos</string>
    <string name="header_expenses">Despeses</string>
    <string name="header_payment_info">Informació del pagament</string>
    <string name="header_aditional_info">Informació adicional</string>
    <string name="header_paid">Qui ha pagat?</string>
    <string name="header_spent">Per a qui ho ha pagat?</string>
    <string name="header_members">Membres del grup</string>
    <string name="header_resolution">Resolució</string>
    <string name="header_balances">Balanços</string>

    <!-- Sections -->
    <string name="title_activity_empty"></string>
    <string name="title_section_dashboard">Resum</string>
    <string name="title_section_history">Historial</string>
    <string name="title_section_people">Amics</string>
    <string name="title_section_groups">Grups</string>
    <string name="title_section_settings">Configuració</string>

    <!-- Main sections -->
    <string name="dashboard_income">Ingressos:</string>
    <string name="dashboard_expense">Despeses:</string>
    <string name="dashboard_result">Resultat:</string>
    <string name="dashboard_owe_me">Em deuen:</string>
    <string name="dashboard_i_owe">Dec:</string>
    <string name="people_owe_me">Em deuen</string>
    <string name="people_i_owe">Dec</string>
    <string name="people_settled">Sense deutes</string>

    <!-- Balances -->
    <string name="balance_paid">Pagat: </string>
    <string name="balance_spent">Gastat: </string>
    <string name="balance_received">Rebut: </string>
    <string name="balance_given">Donat: </string>

    <!-- Action bar -->
    <string name="ab_add_expense">Afegir despesa</string>
    <string name="ab_add_income">Afegir ingrés</string>
    <string name="ab_add_group">Afegir grup</string>
    <string name="ab_add_person">Afegir amic</string>
    <string name="ab_add_debt">Afegir deute</string>
    <string name="ab_add_group_transaction">Afegir transacció</string>
    <string name="ab_add_category">Afegir categoria</string>
    <string name="ab_expense_categories">Categories despeses</string>
    <string name="ab_income_categories">Categories ingressos</string>

    <!-- Input info -->
    <string name="input_name">Nom</string>
    <string name="input_email">Email</string>
    <string name="input_amount">Quantitat</string>
    <string name="input_comments">Comentaris</string>
    <string name="input_date">Data</string>
    <string name="input_from">De</string>
    <string name="input_to">Per</string>
    <string name="input_color">Color</string>


    <!-- Hints -->
    <string name="hint_name_people">ex: Daenerys Targaryen</string>
    <string name="hint_name_group">ex: Família Stark</string>
    <string name="hint_name_categories">ex: Transport</string>
    <string name="hint_email">ex: dany_targaryen@gmail.com</string>
    <string name="hint_comments">Comentaris</string>
    <string name="hint_amount">Quantitat</string>
    <string name="hint_who_paid">Qui ha pagat?</string>
    <string name="hint_who_spent">Per a qui ho ha pagat?</string>
    <string name="hint_who_gives">Qui dona diners?</string>
    <string name="hint_who_receives">A qui li dona?</string>
    <string name="hint_write_to_add_a_member">Escriu fer afegir un nou membre</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Obrir panell de navegació lateral</string>
    <string name="navigation_drawer_close">Tancar panell de navegació lateral</string>

    <!-- Hints -->
    <string name="error_name">"Has d'escriure un nom"</string>
    <string name="error_email">"Has de posar un email"</string>
    <string name="error_amount">Has de posar una quantitat, no pot ser 0</string>
    <string name="error_category">Has de seleccionar una categoria</string>
    <string name="error_people">Has de posar un amic</string>
    <string name="error_not_me">En un deute has de sortir tu</string>
    <string name="error_people_in_group">Un grup ha de tenir com a mínim 2 membres</string>
    <string name="error_paid">"Algú ha d'haver pagat"</string>
    <string name="error_spent">"No pot ser que s'hagin pagat menys diners dels que s'han gastat"</string>
    <string name="error_not_spent">"No es pot repartir si ningú ha gastat"</string>

    <string-array name="options_long_clik_list">
        <item>Editar</item>
        <item>Eliminar</item>
    </string-array>

</resources>
