<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/linearLayout_main_container">

    <LinearLayout
        style="@style/linearLayout_input" >

        <TextView
            style="@style/textView_input_title"
            android:text="@string/input_amount"/>

        <EditText
            style="@style/editText_input"
            android:id="@+id/et_amount"
            android:hint="@string/hint_amount"
            android:inputType="numberDecimal" >
            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        style="@style/linearLayout_input" >

        <TextView
            style="@style/textView_input_title"
            android:text="@string/input_from"/>

        <AutoCompleteTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/et_from"
            android:hint="@string/hint_who_gives"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        style="@style/linearLayout_input" >

        <TextView
            style="@style/textView_input_title"
            android:text="@string/input_to"/>

        <AutoCompleteTextView
            style="@style/editText_input"
            android:id="@+id/et_to"
            android:hint="@string/hint_who_receives"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        style="@style/linearLayout_input" >

        <TextView
            style="@style/textView_input_title"
            android:text="@string/input_date" />

        <Button
            style="@style/button_input"
            android:id="@+id/b_date"/>
    </LinearLayout>

    <LinearLayout
        style="@style/linearLayout_input" >

        <TextView
            style="@style/textView_input_title"
            android:text="@string/input_comments"/>

        <EditText
            style="@style/editText_input"
            android:id="@+id/et_comments"
            android:hint="@string/hint_comments"
            android:inputType="text" >
            <requestFocus />
        </EditText>

    </LinearLayout>
</LinearLayout>