<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/linearLayout_main_container">

    <LinearLayout
        style="@style/linearLayout_input" >
        <TextView
            style="@style/textView_input_title"
            android:text="@string/input_name" />

        <EditText
            style="@style/editText_input"
            android:id="@+id/et_people_name"
            android:layout_width="match_parent"
            android:hint="@string/hint_name_people"
            android:inputType="textPersonName" >
            <requestFocus />
        </EditText>
    </LinearLayout>


    <LinearLayout
        style="@style/linearLayout_input" >

        <TextView
            style="@style/textView_input_title"
            android:text="@string/input_email" />

        <EditText
            style="@style/editText_input"
            android:id="@+id/et_people_email"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />
    </LinearLayout>

</LinearLayout>