<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/linearLayout_main_container_without_padding">

    <LinearLayout
        style="@style/linearLayout_expense_income" >

        <Button
            style="@style/button_expense"
            android:id="@+id/b_expense"/>

        <Button
            style="@style/button_income"
            android:id="@+id/b_income" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            style="@style/linearLayout_main_container">



            <TextView
                android:text="@string/header_payment_info"
                style="@style/sectionHeader" />

            <LinearLayout
                style="@style/linearLayout_input" >

                <TextView
                    style="@style/textView_input_title"
                    android:text="@string/input_amount"/>

                <EditText
                    style="@style/editText_input"
                    android:id="@+id/et_amount"
                    android:hint="@string/hint_amount"
                    android:inputType="numberDecimal" >
                </EditText>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_thickness" >

                <TextView
                    android:layout_marginTop="@dimen/margin_double"
                    android:layout_toLeftOf="@+id/iv_edit_categories"
                    android:layout_marginRight="@dimen/margin_simple"
                    android:text="CATEGORY"
                    style="@style/sectionHeader" />

                <ImageView
                    android:id="@+id/iv_edit_categories"
                    android:layout_width="@dimen/row_icon_size"
                    android:layout_height="@dimen/row_icon_size"
                    android:layout_margin="@dimen/margin_simple"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_action_edit_black" />

            </RelativeLayout>


            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lv_categories"/>

            <TextView
                android:layout_marginTop="@dimen/margin_double"
                android:text="@string/header_aditional_info"
                style="@style/sectionHeader" />

            <LinearLayout
                style="@style/linearLayout_input" >

                <TextView
                    style="@style/textView_input_title"
                    android:text="@string/input_date" />

                <Button
                    style="@style/button_input"
                    android:id="@+id/b_date"/>
            </LinearLayout>

            <LinearLayout
                style="@style/linearLayout_input" >

                <TextView
                    style="@style/textView_input_title"
                    android:text="@string/input_date" />

                <EditText
                    style="@style/editText_input"
                    android:id="@+id/et_comments"
                    android:hint="@string/hint_comments" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>