<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/linearLayout_main_container_without_padding">

    <LinearLayout
        style="@style/linearLayout_expense_income">

        <Button
            style="@style/button_expense"
            android:id="@+id/b_expense"/>

        <Button
            style="@style/button_income"
            android:id="@+id/b_income" />
    </LinearLayout>

    <LinearLayout
        style="@style/linearLayout_main_container">
        <LinearLayout
            style="@style/linearLayout_input" >

            <TextView
                style="@style/textView_input_title"
                android:text="@string/input_name" />

            <EditText
                style="@style/editText_input"
                android:id="@+id/et_categories_name"
                android:hint="@string/hint_name_categories"
                android:inputType="text" >
                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            style="@style/linearLayout_input" >

            <TextView
                style="@style/textView_input_title"
                android:text="@string/input_color" />

            <Spinner
                style="@style/spinner_input"
                android:id="@+id/sp_color" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>